# simplePIC

./: .gitignore  CMakeLists.txt  README.md
src/: FDTD.cpp  FDTD.hpp  MDVector.hpp  main.cpp
